--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "@apollo/server": "^4.10.1",
+    "apollo-server-express": "^3.13.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
