--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "outDir": "dist/js",
     "rootDir": "src",
-    "strict": true,
+    // "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
   },
